Fix CSS menu Z-index

--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ a {
   margin-top: 0;
   display: block;
   cursor: pointer;
-  z-index: 1;
+  z-index: 2;
 }
 
 .bar {
@@ -275,6 +275,7 @@ a {
   padding: 38px 0;
   overflow: hidden;
   left: 0;
+  z-index: 1;
 }
 
 .nav-menu a {
